<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.NoActionBar"
        android:background="@drawable/login_background"
        tools:context=".AccountActivity">

    <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar"
            android:visibility="gone">
    </ProgressBar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/copa_america_login"
                android:layout_gravity="center_horizontal"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNombre_account"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre_account"
                android:textColorHint="@color/md_white_1000"
                android:drawableStart="@drawable/ic_action_lastname"
                android:drawablePadding="20dp"
                android:textColor="@color/md_white_1000"
                android:inputType="textPersonName"
                />


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail_account"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:textColorHint="@color/md_white_1000"
                android:drawableStart="@drawable/ic_action_name"
                android:drawablePadding="20dp"
                android:textColor="@color/md_white_1000"
                android:inputType="textEmailAddress"
                />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword_account"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/md_white_1000"
                android:drawableStart="@drawable/ic_action_password"
                android:drawablePadding="20dp"
                android:textColor="@color/md_white_1000"
                android:inputType="textPassword"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRepassword"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/reppassword"
                android:textColorHint="@color/md_white_1000"
                android:drawableStart="@drawable/ic_action_password"
                android:drawablePadding="20dp"
                android:textColor="@color/md_white_1000"
                android:inputType="textPassword"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btaccount"
                android:background="@drawable/button_background"
                android:text="@string/account"
                android:textColor="@color/md_white_1000"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>


    </LinearLayout>

</RelativeLayout>