<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:theme="@style/AppTheme.NoActionBar"
        tools:context=".LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/copa_america_login"
                android:layout_gravity="center_horizontal"/>



        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:textColorHint="@color/md_white_1000"
                android:drawableStart="@drawable/ic_action_name"
                android:drawablePadding="20dp"
                android:textColor="@color/md_white_1000"
                android:inputType="textEmailAddress"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/md_white_1000"
                android:drawableStart="@drawable/ic_action_password"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:textColor="@color/md_white_1000"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btSignin"
                android:background="@drawable/button_background"
                android:text="@string/singin"
                android:textColor="@color/md_white_1000"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btCreateaccount"
                android:background="@drawable/button_background"
                android:text="@string/createaccount"
                android:textColor="@color/md_white_1000"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

        <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp" />

        <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/google_sign_in_button"
                android:layout_marginBottom="15dp" />

    </LinearLayout>

</RelativeLayout>